New things learned

--- a/DAY_1/Project1.html
+++ b/DAY_1/Project1.html
@@ -126,6 +126,11 @@
     <div style="background-color:rgb(228, 219, 219); height:80vh;" id="Ct">
         <h2> Contact Us</h2>
         <br>
+        <details>
+            <summary>About us</summary>
+            <p>Bean & Brew<br>
+            123 Coffee Lane,<br>
+        </details>
         <p><b>Instagram:</b>@beanbrew</p>
         <p><b>Phone:</b> +91 9876543210</p>
         <p><b>Email:</b> contact@beanbrew.com</p>
