--- a/DAY_1/Frameset.html
+++ b/DAY_1/Frameset.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<frameset rows ="50%,40%">
+<frameset cols ="30%,70%">
     <frame src="Project1.html" />
-    <frame src="Practiceform.html" />
 
-     <frameset cols="30%,*">
+     <frameset rows="25%,*">
         <frame src="anchor.html" />
-        <frame src="Calci.html" />
+        
+           <frameset cols="50%,50%">
+            <frame src="FirstProg.html" />
+            <frame src="Details.html" />
+
+           </frameset>
      </frameset>
+
 </frameset>
 </html>
